# optick-attr-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/examples/: fibonacci.rs
