[package]
name = "optick-attr"
version = "0.1.0"
authors = ["Vadim Slyusarev <vadim@optick.dev>"]
edition = "2018"
description = "Super lightweight performance profiler: function attributes"
repository = "https://github.com/bombomby/optick-attr-rs"
keywords = ["profiler", "performance", "optick"]
categories = ["development-tools::profiling", "api-bindings"]
readme = "README.md"
license = "MIT" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optick = "^1.3.1"
quote = "^1.0.0"
syn = { version = "^1.0.0", features = ["full"] }

[lib]
proc-macro=true

[features]
default = ["enable"]
enable = []